# ml-finance-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/docs/: data_dictionary.txt
data/golden_set/: golden_set.json
data/processed/: credit_risk_clean.csv.dvc
docs/: LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  PLAN.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: benchmark.py  llm_judge.py  ragas_eval.py
models/: .gitignore  chunks.npy.dvc  credit_model.joblib.dvc  faiss_index.bin.dvc  feature_names.joblib.dvc  scaler.joblib.dvc
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_model.ipynb  04_mlp_pytorch.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
src/: config.py
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/features/: feature_engineering.py
src/models/: baseline.py  train.py
src/monitoring/: drift.py  metrics.py
src/security/: guardrails.py
src/serving/: app.py  dashboard.py
tests/: conftest.py  test_features.py  test_guardrails.py  test_models.py
