[project]
name = "ml-finance-agent"
version = "0.1.0"
description = "AI-powered agent for credit risk analysis"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3",
    "scikit-learn>=1.8",
    "mlflow>=3.10",
    "torch>=2.11",
    "jupyter>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
